linux/mrbusy.firewall.conf
# Generated by iptables-save v1.4.9 on Fri Sep 19 14:30:04 2014
*nat
:PREROUTING ACCEPT [14669436:3174631077]
:OUTPUT ACCEPT [630679:40199432]
:POSTROUTING ACCEPT [630679:40199432]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8090 
COMMIT
# Completed on Fri Sep 19 14:30:04 2014
# Generated by iptables-save v1.4.9 on Fri Sep 19 14:30:04 2014
*filter
:INPUT DROP [2726808:525327389]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -s 127.0.0.1/32 -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state INVALID -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP 
-A INPUT -s 10.0.0.0/8 -j DROP 
-A INPUT -s 192.0.0.0/24 -j DROP 
-A INPUT -s 169.254.0.0/16 -j DROP 
-A INPUT -s 172.16.0.0/12 -j DROP 
-A INPUT -s 224.0.0.0/4 -j DROP 
-A INPUT -d 224.0.0.0/4 -j DROP 
-A INPUT -s 240.0.0.0/5 -j DROP 
-A INPUT -d 240.0.0.0/5 -j DROP 
-A INPUT -s 0.0.0.0/8 -j DROP 
-A INPUT -d 0.0.0.0/8 -j DROP 
-A INPUT -d 239.255.255.0/24 -j DROP 
-A INPUT -d 255.255.255.255/32 -j DROP 
-A INPUT -s 59.167.120.233/32 -j ACCEPT 
-A INPUT -s 128.250.111.42/32 -j ACCEPT 
-A INPUT -s 128.250.110.139/32 -j ACCEPT 
-A INPUT -s 128.250.111.220/32 -j ACCEPT 
-A INPUT -s 128.250.110.157/32 -j ACCEPT 
-A INPUT -s 128.250.111.44/32 -j ACCEPT 
-A INPUT -s 128.250.110.66/32 -j ACCEPT 
-A INPUT -s 128.250.110.70/32 -j ACCEPT 
-A INPUT -s 128.250.110.83/32 -j ACCEPT 
-A INPUT -s 128.250.110.94/32 -j ACCEPT 
-A INPUT -s 128.250.110.136/32 -j ACCEPT 
-A INPUT -s 128.250.111.43/32 -j ACCEPT 
-A INPUT -s 128.250.110.253/32 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8090 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16286 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16287 -m state --state NEW -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 17 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 13 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type any -m limit --limit 1/sec -j ACCEPT 
-A FORWARD -m state --state INVALID -j DROP 
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT 
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -m state --state INVALID -j DROP 
-A OUTPUT -d 59.167.120.233/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.42/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.139/32 -j ACCEPT 
-A OUTPUT -s 128.250.111.220/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.157/32 -j ACCEPT 
-A OUTPUT -s 128.250.111.44/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.66/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.70/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.83/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.94/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.136/32 -j ACCEPT 
-A OUTPUT -s 128.250.111.43/32 -j ACCEPT 
-A OUTPUT -s 128.250.110.253/32 -j ACCEPT 
-A OUTPUT -m state --state NEW -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Fri Sep 19 14:30:04 2014
