linux/mrfat.iptables.conf
# Generated by iptables-save v1.4.8 on Fri Sep 19 13:05:32 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [912222680:51520180258]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 128.250.111.180/32 -j ACCEPT 
-A INPUT -s 128.250.111.42/32 -j ACCEPT 
-A INPUT -s 128.250.111.87/32 -j ACCEPT 
-A INPUT -s 128.250.110.139/32 -j ACCEPT 
-A INPUT -s 128.250.111.220/32 -j ACCEPT 
-A INPUT -s 128.250.110.157/32 -j ACCEPT 
-A INPUT -s 128.250.111.44/32 -j ACCEPT 
-A INPUT -s 128.250.110.66/32 -j ACCEPT 
-A INPUT -s 128.250.110.70/32 -j ACCEPT 
-A INPUT -s 128.250.110.83/32 -j ACCEPT 
-A INPUT -s 128.250.110.94/32 -j ACCEPT 
-A INPUT -s 128.250.110.136/32 -j ACCEPT 
-A INPUT -s 128.250.111.43/32 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16286 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16287 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3737 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 3737 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5353 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 5353 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A OUTPUT -d 128.250.111.180/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.42/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.87/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.139/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.220/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.157/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.44/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.66/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.70/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.83/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.94/32 -j ACCEPT 
-A OUTPUT -d 128.250.110.136/32 -j ACCEPT 
-A OUTPUT -d 128.250.111.43/32 -j ACCEPT 
COMMIT
# Completed on Fri Sep 19 13:05:32 2014
# Generated by iptables-save v1.4.8 on Fri Sep 19 13:05:32 2014
*nat
:PREROUTING ACCEPT [75114104:13496069053]
:POSTROUTING ACCEPT [1225828:127442878]
:OUTPUT ACCEPT [1225828:127442878]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8090 
COMMIT
# Completed on Fri Sep 19 13:05:32 2014
# Generated by iptables-save v1.4.8 on Fri Sep 19 13:05:32 2014
*mangle
:PREROUTING ACCEPT [3445669431:3474385182338]
:INPUT ACCEPT [3415324129:3470407368032]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1244320709:3188181355978]
:POSTROUTING ACCEPT [1246061888:3188569435716]
COMMIT
# Completed on Fri Sep 19 13:05:32 2014
